# logos-mint-authority

./: .gitignore  Cargo.toml  DELIVERABLES.md  LICENSE-MIT  README.md  SUBMISSION.md
.github/workflows/: ci.yml
demo/: README.md  run_demo.sh
docs/: AUTHORITY_MODEL.md  CU_COST.md
examples/: fixed-supply-revoked-authority.md  variable-supply-mint-authority.md
mint-authority/: Cargo.toml
mint-authority/examples/spel-token/: Cargo.toml  spel_token.idl.json
mint-authority/examples/spel-token-guest/: Cargo.toml  README.md
mint-authority/examples/spel-token-guest/.cargo/: config.toml
mint-authority/examples/spel-token/src/: lib.rs
mint-authority/src/: lib.rs
scripts/: demo.sh
