[package]
name = "spel-token"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Example SPEL fungible-token program governed by the mint-authority library (Logos LP-0013)"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["host"] }
mint-authority = { path = "../..", features = ["host"] }
borsh = { version = "1.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
